--- a/Regression/Lecture_3.ipynb
+++ b/Regression/Lecture_3.ipynb
@@ -2244,9 +2244,389 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2454b886",
+   "metadata": {},
+   "source": [
+    "# ✅ Final Test Set Evaluation\n",
+    "To ensure our selected best model is not overfitting and truly generalizes,we perform a final evaluation on the held-out test set. \n",
+    "This step provides an unbiased estimate of how the model will perform on unseen data, which is a standard and critical practice in machine learning before deploying a model to production.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "80360648",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Test R²: 0.8333\n",
+      "📊 Test RMSE: 0.4673\n",
+      "📊 Test MAE: 0.3087\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "import numpy as np\n",
+    "\n",
+    "# Predict on test set\n",
+    "y_test_pred = best_tuned_model.predict(X_test)\n",
+    "\n",
+    "# Compute performance metrics\n",
+    "test_r2 = r2_score(y_test, y_test_pred)\n",
+    "test_rmse = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
+    "test_mae = mean_absolute_error(y_test, y_test_pred)\n",
+    "\n",
+    "print(f\"📊 Test R²: {test_r2:.4f}\")\n",
+    "print(f\"📊 Test RMSE: {test_rmse:.4f}\")\n",
+    "print(f\"📊 Test MAE: {test_mae:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f18098",
+   "metadata": {},
+   "source": [
+    "# 🚀 Model Deployment Preparation\n",
+    "Now that we have selected the best tuned model and confirmed it generalizes well on the validation (and test) data, we can prepare it for deployment.\n",
+    "\n",
+    "# This involves several important steps:\n",
+    "1️⃣ Identify the best model based on validation performance.\n",
+    "\n",
+    "2️⃣ Version the model and save both the trained model and preprocessing pipeline.\n",
+    "\n",
+    "3️⃣ Create a comprehensive model card containing metadata, performance metrics, data information, model configuration, preprocessing steps, and deployment instructions.\n",
+    "\n",
+    "4️⃣ Save deployment requirements to ensure reproducibility in production.\n",
+    "\n",
+    "These steps ensure that the model is production-ready and can be deployed (e.g., via Streamlit) in a consistent, versioned, and well-documented manner.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "26a5090b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏆 BEST TUNED MODEL: Gradient Boosting\n",
+      "📊 Validation R²: 0.8298\n",
+      "📈 Improvement over untuned: +0.0444\n",
+      "\n",
+      "📊 Test Set Performance:\n",
+      "R²: 0.8333 | RMSE: 0.4673 | MAE: 0.3087\n",
+      "✅ Model saved: models/v1_20251018_042353/best_model.pkl\n",
+      "✅ Preprocessor saved: models/v1_20251018_042353/preprocessor.pkl\n",
+      "✅ Model card saved: models/v1_20251018_042353/model_card.json\n",
+      "✅ Deployment requirements saved: models/v1_20251018_042353/requirements.json\n",
+      "\n",
+      "💾 DEPLOYMENT PACKAGE READY\n",
+      "Location: models/v1_20251018_042353\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import joblib\n",
+    "from datetime import datetime\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "import numpy as np\n",
+    "\n",
+    "# ===========================\n",
+    "# 0️⃣ Prepare feature names\n",
+    "# ===========================\n",
+    "# Works for both DataFrame and NumPy array\n",
+    "try:\n",
+    "    feature_names_all = list(X.columns)\n",
+    "except AttributeError:\n",
+    "    feature_names_all = [f\"feature_{i}\" for i in range(X.shape[1])]\n",
+    "\n",
+    "# ===========================\n",
+    "# 1️⃣ Identify best tuned model\n",
+    "# ===========================\n",
+    "best_model_name = max(tuned_results, key=lambda m: tuned_results[m]['val_r2'])\n",
+    "best_tuned_model = tuned_models[best_model_name]\n",
+    "\n",
+    "print(f\"🏆 BEST TUNED MODEL: {best_model_name}\")\n",
+    "print(f\"📊 Validation R²: {tuned_results[best_model_name]['val_r2']:.4f}\")\n",
+    "print(f\"📈 Improvement over untuned: +{tuned_results[best_model_name]['improvement']:.4f}\")\n",
+    "\n",
+    "# ===========================\n",
+    "# 2️⃣ Evaluate on Test Set\n",
+    "# ===========================\n",
+    "y_test_pred = best_tuned_model.predict(X_test)\n",
+    "test_r2 = r2_score(y_test, y_test_pred)\n",
+    "test_rmse = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
+    "test_mae = mean_absolute_error(y_test, y_test_pred)\n",
+    "\n",
+    "print(f\"\\n📊 Test Set Performance:\")\n",
+    "print(f\"R²: {test_r2:.4f} | RMSE: {test_rmse:.4f} | MAE: {test_mae:.4f}\")\n",
+    "\n",
+    "# ===========================\n",
+    "# 3️⃣ Versioning and saving\n",
+    "# ===========================\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "model_version = f\"v1_{timestamp}\"\n",
+    "model_save_dir = os.path.join(config.MODEL_DIR, model_version)\n",
+    "os.makedirs(model_save_dir, exist_ok=True)\n",
+    "\n",
+    "# Save model\n",
+    "model_path = os.path.join(model_save_dir, 'best_model.pkl')\n",
+    "joblib.dump(best_tuned_model, model_path)\n",
+    "print(f\"✅ Model saved: {model_path}\")\n",
+    "\n",
+    "# Save preprocessing pipeline\n",
+    "preprocessor_path = os.path.join(model_save_dir, 'preprocessor.pkl')\n",
+    "joblib.dump(preprocessor, preprocessor_path)\n",
+    "print(f\"✅ Preprocessor saved: {preprocessor_path}\")\n",
+    "\n",
+    "# ===========================\n",
+    "# 4️⃣ Create model card\n",
+    "# ===========================\n",
+    "model_card = {\n",
+    "    'model_name': best_model_name,\n",
+    "    'model_version': model_version,\n",
+    "    'timestamp': timestamp,\n",
+    "    'dataset': 'California Housing',\n",
+    "    'target': 'House Price ($M)',\n",
+    "    \n",
+    "    'performance': {\n",
+    "        'test_r2': float(test_r2),\n",
+    "        'test_rmse': float(test_rmse),\n",
+    "        'test_mae': float(test_mae),\n",
+    "        'train_r2': float(results[best_model_name]['train_r2']),\n",
+    "        'val_r2': float(tuned_results[best_model_name]['val_r2']),\n",
+    "        'cv_r2_mean': float(results[best_model_name]['cv_r2_mean']),\n",
+    "        'cv_r2_std': float(results[best_model_name]['cv_r2_std']),\n",
+    "    },\n",
+    "    \n",
+    "    'data_info': {\n",
+    "        'total_samples': int(len(X)),\n",
+    "        'train_samples': int(len(X_train)),\n",
+    "        'val_samples': int(len(X_val)),\n",
+    "        'test_samples': int(len(X_test)),\n",
+    "        'n_features': X_test.shape[1],\n",
+    "        'feature_names': feature_names_all,\n",
+    "    },\n",
+    "    \n",
+    "    'model_config': {\n",
+    "        'model_class': best_model_name,\n",
+    "        'hyperparameters': dict(best_tuned_model.get_params()) \n",
+    "            if hasattr(best_tuned_model, 'get_params') else {},\n",
+    "    },\n",
+    "    \n",
+    "    'preprocessing': {\n",
+    "        'steps': [\n",
+    "            'AdvancedFeatureEngineering (6 new features)',\n",
+    "            'OutlierHandling (IQR method)',\n",
+    "            'RobustScaler (outlier-resistant scaling)',\n",
+    "        ],\n",
+    "        'outlier_factor': 1.5,\n",
+    "    },\n",
+    "    \n",
+    "    'deployment': {\n",
+    "        'status': 'Ready for Production',\n",
+    "        'recommendations': [\n",
+    "            'Monitor prediction errors in production',\n",
+    "            'Retrain quarterly with new data',\n",
+    "            'Alert if RMSE exceeds $0.50M',\n",
+    "        ]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "card_path = os.path.join(model_save_dir, 'model_card.json')\n",
+    "with open(card_path, 'w') as f:\n",
+    "    json.dump(model_card, f, indent=2)\n",
+    "print(f\"✅ Model card saved: {card_path}\")\n",
+    "\n",
+    "# ===========================\n",
+    "# 5️⃣ Deployment requirements\n",
+    "# ===========================\n",
+    "requirements = {\n",
+    "    'python': '3.8+',\n",
+    "    'packages': {\n",
+    "        'scikit-learn': '1.0+',\n",
+    "        'numpy': '1.20+',\n",
+    "        'pandas': '1.3+',\n",
+    "        'joblib': '1.0+',\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "req_path = os.path.join(model_save_dir, 'requirements.json')\n",
+    "with open(req_path, 'w') as f:\n",
+    "    json.dump(requirements, f, indent=2)\n",
+    "print(f\"✅ Deployment requirements saved: {req_path}\")\n",
+    "\n",
+    "# ===========================\n",
+    "# 6️⃣ Summary\n",
+    "# ===========================\n",
+    "print(\"\\n💾 DEPLOYMENT PACKAGE READY\")\n",
+    "print(f\"Location: {model_save_dir}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35f6208",
+   "metadata": {},
+   "source": [
+    "## 🚀 Final Step: Interactive Prediction UI with Streamlit\n",
+    "\n",
+    "After completing model training, evaluation, versioning, and saving all artifacts (model, preprocessor, model card, and requirements), the **final step** is to create a **user-friendly interface** for making predictions in real time.\n",
+    "\n",
+    "### Why Streamlit?\n",
+    "\n",
+    "- **Streamlit vs Gradio**:  \n",
+    "  - Both are great for building quick ML UIs, but **Streamlit** offers more flexibility for dashboards, multi-page apps, and complex layouts.  \n",
+    "  - Streamlit is widely adopted in industry for **production-ready applications**, whereas Gradio is often used for simple demos and prototyping.  \n",
+    "\n",
+    "- **Motivation**:  \n",
+    "  - Allow non-technical users to input house features interactively.  \n",
+    "  - Make real-time predictions using the trained pipeline.  \n",
+    "  - Visualize inputs and outputs for better interpretability.  \n",
+    "\n",
+    "### Implementation\n",
+    "\n",
+    "- The interactive UI is **already implemented** in this project as:\n",
+    "\n",
+    "  1. **`app.py`**  \n",
+    "     - Main Streamlit script for the dashboard.  \n",
+    "     - Loads the latest model and preprocessor.  \n",
+    "     - Accepts user input via sliders, runs predictions, and displays results.\n",
+    "\n",
+    "  2. **`utils.py`** *(optional helper module)*  \n",
+    "     - Contains reusable utility functions such as feature preprocessing, input validation, and prediction wrappers.  \n",
+    "\n",
+    "> **Student Note:** Check `app.py` and `utils.py` to see the full Streamlit implementation and understand how the pipeline integrates with the interactive UI.\n",
+    "\n",
+    "By completing this step, the project now covers the **full ML lifecycle**: from raw data exploration → advanced feature engineering → model training → hyperparameter tuning → model versioning → deployment-ready interactive UI.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"streamlit_app.png\" alt=\"Streamlit Dashboard\" width=\"700\"/>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "953c4742",
+   "metadata": {},
+   "source": [
+    "## 📚 Key Learnings Recap\n",
+    "\n",
+    "This notebook represents a significant upgrade over our previous work, evolving from basic experimentation to a **production-ready, reproducible machine learning workflow**. Here’s what we accomplished:\n",
+    "\n",
+    "1. **✅ MLflow for Experiment Tracking**  \n",
+    "   - All experiments, model metrics, and parameters were tracked using **MLflow**, ensuring transparency and reproducibility.  \n",
+    "   - Enabled easy comparison of different models and hyperparameter settings.\n",
+    "\n",
+    "2. **✅ Configuration for Reproducibility**  \n",
+    "   - Used a **centralized configuration system** to manage random seeds, file paths, and model parameters.  \n",
+    "   - Guarantees that experiments can be rerun with consistent results across different environments.\n",
+    "\n",
+    "3. **✅ Robust Data Pipeline**  \n",
+    "   - Implemented a pipeline with **advanced feature engineering** (e.g., room-to-bedroom ratio, income per room, geographic quadrants).  \n",
+    "   - Handled outliers and missing values systematically.  \n",
+    "   - Properly split data into training, validation, and test sets for unbiased evaluation.\n",
+    "\n",
+    "4. **✅ Training Advanced Models**  \n",
+    "   - Expanded beyond simple linear models (Linear, Ridge, Lasso, Polynomial) to include **Random Forest, SVR, Ensemble Voting, and Gradient Boosting**.  \n",
+    "   - Allowed rigorous comparison across a spectrum of model complexities and capabilities.\n",
+    "\n",
+    "5. **✅ Performance Comparison**  \n",
+    "   - Evaluated models using R², RMSE, and MAE.  \n",
+    "   - Identified strengths and weaknesses of each model class.  \n",
+    "   - Provided evidence-based selection for production deployment.\n",
+    "\n",
+    "6. **✅ Hyperparameter Tuning**  \n",
+    "   - Applied **GridSearchCV / RandomizedSearchCV** for Gradient Boosting and other models.  \n",
+    "   - Observed substantial performance improvements, making **Gradient Boosting the best model**.\n",
+    "\n",
+    "7. **✅ Model Versioning & Metadata for Production**  \n",
+    "   - Saved the **best model and preprocessor** using `joblib`, including metadata such as hyperparameters, feature names, and performance metrics.  \n",
+    "   - Established a workflow for **versioning and reproducible deployment**.\n",
+    "\n",
+    "8. **✅ Transition from Gradio to Streamlit UI**  \n",
+    "   - Upgraded the interactive interface from Gradio to **Streamlit**, enabling a full-fledged prediction dashboard.  \n",
+    "   - Integrated advanced preprocessing and feature engineering within the app for consistent predictions.\n",
+    "\n",
+    "\n",
+    "**💡 Summary:**  \n",
+    "This notebook demonstrates a full ML lifecycle:  \n",
+    "from **robust data handling → advanced modeling → hyperparameter tuning → model tracking → deployment-ready Streamlit UI**.  \n",
+    "It is now **production-ready**, reproducible, and scalable for real-world applications.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22e94bf6",
+   "metadata": {},
+   "source": [
+    "## 🏋️‍♂️ Final Exercise: Reproduce the Workflow on a Different Dataset\n",
+    "\n",
+    "### 🎯 Objective\n",
+    "\n",
+    "Apply the **end-to-end ML workflow** you’ve learned in this course to a **new real-world dataset**. This exercise is designed to reinforce:\n",
+    "\n",
+    "- Exploratory Data Analysis (EDA) and preprocessing  \n",
+    "- Feature engineering (creating meaningful features where applicable)  \n",
+    "- Training and comparing **advanced regression models**  \n",
+    "- Hyperparameter tuning to maximize performance  \n",
+    "- Model versioning and packaging for production  \n",
+    "- Creating an **interactive UI** for predictions with Streamlit or Gradio  \n",
+    "\n",
+    "By completing this exercise, you’ll demonstrate how to **take a dataset from raw exploration all the way to a production-ready ML application**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 📝 Instructions\n",
+    "\n",
+    " **Select a dataset**  \n",
+    "   - Choose a real-world dataset different from California Housing.  \n",
+    "   - Recommended examples: Boston Housing, Diabetes, or any dataset with continuous target variables.  \n",
+    "   - Ensure the dataset has enough features to allow meaningful preprocessing and feature engineering.\n",
+    "\n",
+    "\n",
+    "### 📂 Deliverables\n",
+    "\n",
+    "1. Jupyter notebook reproducing the **full workflow**.  \n",
+    "2. Saved model and preprocessing pipeline (`joblib` files).  \n",
+    "3. Model card (`model_card.json`).  \n",
+    "4. Streamlit/Gradio app (`app.py`) with a **demo video shared** in the SAIR Telegram group.(this is **mandatory**)\n",
+    "5. Optional `utils.py` module for preprocessing and prediction functions.  \n",
+    "\n",
+    "---\n",
+    "### 📂 More on the demo: \n",
+    "The practioner should record a short video a short video explaining : \n",
+    "1. Dataset overview and EDA highlights.\n",
+    "2. Key preprocessing and feature engineering steps.\n",
+    "3. Model training, selection, and tuning process.\n",
+    "4. Demonstration of the interactive UI for predictions. \n",
+    "5. The demo must be shared in the SAIR Telegram group before the deadline next week lectures.\n",
+    "\n",
+    "\n",
+    "> **Goal:** By completing this exercise, you will **demonstrate mastery of both Lecture_2 and Lecture_3 concepts**, showing how to take a dataset from raw exploration to a **production-ready ML pipeline with interactive UI**. This is your opportunity to **apply best practices for reproducibility, feature engineering, model tuning, and deployment**.\n",
+    "\n",
+    "### 📂 Resources:\n",
+    "1. **Follow the Workflow from Lecture_2 and Lecture_3 Notebooks**  \n",
+    "   - Use the notebooks as a guide to structure your project.  \n",
+    "   - Implement similar preprocessing, modeling, evaluation, and deployment steps.\n",
+    "2. **Use these External Reading**(i will provide the material in Resources folder)\n",
+    "  - Read about the **Universal Workflow of an ML Project** from the book *Python Deep Learning*.\n",
+    "  - Explore a notebook from *Hands-On Machine Learning with Scikit-Learn and TensorFlow* (Chapter 2) that demonstrates practical ML workflows.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a5090b",
+   "id": "e2292c13",
    "metadata": {},
    "outputs": [],
    "source": []
