--- a/3_Neural Network from Scrach/nn3.ipynb
+++ b/3_Neural Network from Scrach/nn3.ipynb
@@ -5,23 +5,45 @@
       "id": "021704d9",
       "metadata": {},
       "source": [
-        "# 🧠 Lecture 3: From First Principles to Production Pipeline\n",
+        "# 🧠 **Lecture 3 — From First Principles to a Production-Ready ML Pipeline**\n",
         "\n",
-        "## 🎯 Learning Objectives\n",
-        "1. **Experience** raw data loading from URLs (no libraries)\n",
-        "2. **Stress test** DNNs across 3 architectures × 3 datasets (9 models)\n",
-        "3. **Visualize** training dynamics with comprehensive plots\n",
-        "4. **Design** production-ready ML pipeline architecture\n",
-        "5. **Deploy** interactive UI for model comparison\n",
+        "> **Note:**\n",
+        "> This notebook is intentionally kept **minimal**.\n",
+        "> Its purpose is to **introduce the full lifecycle** of building a machine learning model — from raw data to production deployment.\n",
+        "> The *actual implementations* live in a modular Python package located in the same directory.\n",
         "\n",
-        "### 🧭 Experiment Matrix: 3×3 Grid\n",
-        "| Architecture \\ Dataset | MNIST | Fashion MNIST | CIFAR-10 |\n",
-        "|------------------------|-------|---------------|----------|\n",
-        "| **Simple DNN** (1 hidden) | Model 1 | Model 2 | Model 3 |\n",
-        "| **Medium DNN** (2 hidden) | Model 4 | Model 5 | Model 6 |\n",
-        "| **Deep DNN** (3 hidden) | Model 7 | Model 8 | Model 9 |\n",
+        "---\n",
         "\n",
-        "---"
+        "## 🎯 **Learning Objectives**\n",
+        "\n",
+        "By the end of this session, you will:\n",
+        "\n",
+        "1. **Load & preprocess raw datasets manually**\n",
+        "   – No high-level libraries, no shortcuts.\n",
+        "\n",
+        "2. **Train & stress-test nine DNN models**\n",
+        "   – 3 architectures × 3 datasets = **9 experiments**.\n",
+        "\n",
+        "3. **Visualize the complete training dynamics**\n",
+        "   – Loss curves, accuracy curves, and per-epoch diagnostics.\n",
+        "\n",
+        "4. **Design a production-ready ML pipeline**\n",
+        "   – Modular architecture, clean abstractions, reusable components.\n",
+        "\n",
+        "5. **Deploy an interactive UI for model comparison**\n",
+        "   – Side-by-side evaluation of all trained models.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🧭 **Experiment Matrix — 3×3 Grid**\n",
+        "\n",
+        "| **Architecture \\ Dataset**       | **MNIST** | **Fashion-MNIST** | **CIFAR-10** |\n",
+        "| -------------------------------- | --------- | ----------------- | ------------ |\n",
+        "| **Simple DNN** (1 hidden layer)  | Model 1   | Model 2           | Model 3      |\n",
+        "| **Medium DNN** (2 hidden layers) | Model 4   | Model 5           | Model 6      |\n",
+        "| **Deep DNN** (3 hidden layers)   | Model 7   | Model 8           | Model 9      |\n",
+        "\n",
+        "---\n"
       ]
     },
     {
@@ -5717,14 +5739,6 @@
         "print(\"🎉 LECTURE 3 COMPLETE! Ready for CNNs in Lecture 4! 🎉\")\n",
         "print(\"=\" * 80)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "924288d3",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
