--- a/4_PyTorch/labs/lab_1.ipynb
+++ b/4_PyTorch/labs/lab_1.ipynb
@@ -623,6 +623,14 @@
     "\n",
     "**You're ready for Lecture 2: Advanced PyTorch Patterns!** 🎉"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Very Important Note:\n",
+    "# Go to Chapter 9 of Hands On Machine Learning with sklearn and PyTorch by Aurélien Géron.and solve the exercises at the end of the chapter.and add it in this notebook as well."
+   ]
   }
  ],
  "metadata": {
